--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,16 @@
     </dependency>
     <dependency>
       <groupId>io.ktor</groupId>
+      <artifactId>ktor-server-cio</artifactId>
+      <version>${ktor_version}</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback_version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.ktor</groupId>
       <artifactId>ktor-server-core</artifactId>
       <version>${ktor_version}</version>
     </dependency>
@@ -59,11 +69,6 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-events</artifactId>
       <version>2.2.6</version>
-    </dependency>
-    <dependency>
-      <groupId>io.ktor</groupId>
-      <artifactId>ktor-server-cio</artifactId>
-      <version>${ktor_version}</version>
     </dependency>
   </dependencies>
   <build>
