maven multi module project

--- a/ktor-server-lambda-core/resources/application.conf
+++ b/ktor-server-lambda-core/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
   }
 
   application {
-    modules = [com.ktor.HandlerKt.module]
+    modules = [com.mercateo.oss.HandlerKt.module]
   }
 }
 
