install core module locally to be used in sample

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,8 @@ jobs:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
         
-      # run tests!
-      - run: mvn verify
+      # run tests and install locally!
+      - run: mvn verify install
 
 #  deploy:
 #    docker:
