--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,15 +42,13 @@ jobs:
           name: Running tests
           command: mvn verify
 
-#  deploy:
-#    docker:
-#      - image: buildpack-deps:trusty
-#    steps:
-#      - checkout
-#      - run:
-#          name: Deploy Master to Heroku
-#          command: |
-#            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+  deploy:
+    <<: *defaults
+    steps:
+      - checkout
+      - run:
+          name: Deploy Master to Maven Central
+          command: mvn -Poss.release-sign-artifacts deploy
 
 workflows:
   version: 2
