--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+  <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>com.mercateo.oss</groupId>
     <artifactId>oss-parent-pom</artifactId>
     <version>1.0.7</version>
   </parent>
 
-  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.mercateo</groupId>
   <artifactId>ktor-server-lambda</artifactId>
   <version>0.0.1</version>
   <packaging>pom</packaging>
