--- a/ktor-server-lambda-core/pom.xml
+++ b/ktor-server-lambda-core/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.mercateo.oss</groupId>
+    <groupId>com.mercateo</groupId>
     <artifactId>ktor-server-lambda</artifactId>
     <version>0.0.1</version>
   </parent>
