--- a/ktor-server-lambda-sample/pom.xml
+++ b/ktor-server-lambda-sample/pom.xml
@@ -36,7 +36,7 @@
     </dependency>
 
     <dependency>
-      <groupId>com.mercateo.oss</groupId>
+      <groupId>com.mercateo</groupId>
       <artifactId>ktor-server-lambda-core</artifactId>
       <version>${project.version}</version>
     </dependency>
