--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,13 +49,12 @@ jobs:
       - run:
           name: Deploy Master to Maven Central
           command: |
-              echo ${GPG_SECRET} > /tmp/secretkey.asc
-              gpg --import /tmp/secretkey.asc
+              echo $GPG_SECRET_BASE64 | base64 --decode | gpg --import
+              echo $GPG_OWNERTRUST_BASE64 | base64 --decode | gpg --import-ownertrust
               $MVN_CMD deploy -Poss.release-sign-artifacts \
+                  -Dgpg.executable=gpg
                   -Dgpg.passphrase=$GPG_PASSPHRASE \
                   -pl='!ktor-server-lambda-sample'
-              gpg --delete-key 934B88A63DB62338
-              rm /tmp/secretkey.asc
 
 workflows:
   version: 2
