try to fix deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,8 +49,8 @@ jobs:
       - run:
           name: Deploy Master to Maven Central
           command: |
-              echo $GPG_SECRET_BASE64 | base64 --decode | gpg --import
-              echo $GPG_OWNERTRUST_BASE64 | base64 --decode | gpg --import-ownertrust
+              echo $GPG_SECRET_BASE64 | base64 --decode | gpg --import --no-tty --batch --yes
+              echo $GPG_OWNERTRUST_BASE64 | base64 --decode | gpg --import-ownertrust --no-tty --batch --yes
               $MVN_CMD deploy -Poss.release-sign-artifacts \
                   -Dgpg.executable=gpg
                   -Dgpg.passphrase=$GPG_PASSPHRASE \
