--- a/pom.xml
+++ b/pom.xml
@@ -124,8 +124,9 @@
               </goals>
               <configuration>
                 <gpgArguments>
-                  <arg>--pinentry-mode</arg>
-                  <arg>loopback</arg>
+                  <arg>--no-tty</arg>
+                  <arg>--batch</arg>
+                  <arg>--yes</arg>
                 </gpgArguments>
               </configuration>
             </execution>
