--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,6 @@ jobs:
           - v1-dependencies-
 
       - run:
-          name: Installing module dependencies
-          command: $MVN_CMD clean install -DskipTests
-
-      - run:
           name: Going offline...
           command: $MVN_CMD dependency:go-offline
 
@@ -37,7 +33,11 @@ jobs:
           paths:
             - $MAVEN_REPO
           key: v1-dependencies-{{ checksum "pom.xml" }}
-        
+
+      - run:
+          name: Installing module dependencies
+          command: $MVN_CMD clean install -DskipTests
+
       - run:
           name: Running tests
           command: $MVN_CMD verify
@@ -46,6 +46,14 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "pom.xml" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
       - run:
           name: Deploy Master to Maven Central
           command: |
