--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
 
       - run:
           name: Going offline...
-          command: $MVN_CMD dependency:go-offline
+          command: $MVN_CMD dependency:resolve-plugins dependency:go-offline
 
       - save_cache:
           paths:
@@ -36,11 +36,11 @@ jobs:
 
       - run:
           name: Installing module dependencies
-          command: $MVN_CMD clean install -DskipTests
+          command: $MVN_CMD -o clean install -DskipTests
 
       - run:
           name: Running tests
-          command: $MVN_CMD verify
+          command: $MVN_CMD -o verify
 
   deploy:
     <<: *defaults
@@ -72,6 +72,6 @@ workflows:
       - deploy:
           requires:
             - build
-#          filters:
-#            branches:
-#              only: master
+          filters:
+            branches:
+              only: master
