--- a/ktor-server-lambda-sample/resources/application.conf
+++ b/ktor-server-lambda-sample/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
   }
 
   application {
-    modules = [com.mercateo.oss.ApplicationKt.module]
+    modules = [com.mercateo.oss.OrdersApplicationKt.orders]
   }
 }
 
