--- a/ktor-server-lambda-sample/pom.xml
+++ b/ktor-server-lambda-sample/pom.xml
@@ -5,9 +5,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.mercateo.oss</groupId>
+    <groupId>com.mercateo</groupId>
     <artifactId>ktor-server-lambda</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.3</version>
   </parent>
 
   <artifactId>ktor-server-lambda-sample</artifactId>
@@ -30,7 +30,7 @@
     </dependency>
 
     <dependency>
-      <groupId>com.mercateo.oss</groupId>
+      <groupId>com.mercateo</groupId>
       <artifactId>ktor-server-lambda-core</artifactId>
       <version>${project.version}</version>
     </dependency>
