--- a/ktor-server-lambda-sample/resources/application.conf
+++ b/ktor-server-lambda-sample/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
   }
 
   application {
-    modules = [com.mercateo.oss.ApplicationKt.main]
+    modules = [com.mercateo.ktor.server.lambda.ApplicationKt.main]
   }
 }
 
