--- a/ktor-server-lambda-sample/pom.xml
+++ b/ktor-server-lambda-sample/pom.xml
@@ -37,6 +37,18 @@
 
     <dependency>
       <groupId>io.ktor</groupId>
+      <artifactId>ktor-gson</artifactId>
+      <version>${ktor_version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback_version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.ktor</groupId>
       <artifactId>ktor-server-tests</artifactId>
       <version>${ktor_version}</version>
       <scope>test</scope>
