re-add local launcher + replace cio dep in core by host-common

--- a/ktor-server-lambda-sample/pom.xml
+++ b/ktor-server-lambda-sample/pom.xml
@@ -37,6 +37,11 @@
 
     <dependency>
       <groupId>io.ktor</groupId>
+      <artifactId>ktor-server-cio</artifactId>
+      <version>${ktor_version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.ktor</groupId>
       <artifactId>ktor-gson</artifactId>
       <version>${ktor_version}</version>
     </dependency>
