--- a/ktor-server-lambda-core/pom.xml
+++ b/ktor-server-lambda-core/pom.xml
@@ -35,7 +35,7 @@
     </dependency>
     <dependency>
       <groupId>io.ktor</groupId>
-      <artifactId>ktor-server-cio</artifactId>
+      <artifactId>ktor-server-host-common</artifactId>
       <version>${ktor_version}</version>
     </dependency>
 
