--- a/ktor-server-lambda-core/pom.xml
+++ b/ktor-server-lambda-core/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.mercateo</groupId>
     <artifactId>ktor-server-lambda</artifactId>
-    <version>0.0.4</version>
+    <version>0.0.5</version>
   </parent>
 
   <artifactId>ktor-server-lambda-core</artifactId>
@@ -35,12 +35,7 @@
     </dependency>
     <dependency>
       <groupId>io.ktor</groupId>
-      <artifactId>ktor-server-cio</artifactId>
-      <version>${ktor_version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.ktor</groupId>
-      <artifactId>ktor-gson</artifactId>
+      <artifactId>ktor-server-host-common</artifactId>
       <version>${ktor_version}</version>
     </dependency>
 
@@ -53,12 +48,6 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-events</artifactId>
       <version>2.2.6</version>
-    </dependency>
-
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${logback_version}</version>
     </dependency>
 
     <dependency>
