--- a/ktor-server-lambda-sample/pom.xml
+++ b/ktor-server-lambda-sample/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.mercateo</groupId>
     <artifactId>ktor-server-lambda</artifactId>
-    <version>0.0.4</version>
+    <version>0.0.5</version>
   </parent>
 
   <artifactId>ktor-server-lambda-sample</artifactId>
@@ -33,6 +33,23 @@
       <groupId>com.mercateo</groupId>
       <artifactId>ktor-server-lambda-core</artifactId>
       <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.ktor</groupId>
+      <artifactId>ktor-server-cio</artifactId>
+      <version>${ktor_version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.ktor</groupId>
+      <artifactId>ktor-gson</artifactId>
+      <version>${ktor_version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback_version}</version>
     </dependency>
 
     <dependency>
