--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,19 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>com.github.gantsign.maven</groupId>
+          <artifactId>ktlint-maven-plugin</artifactId>
+          <version>1.0.2</version>
+          <executions>
+            <execution>
+              <id>format</id>
+              <goals>
+                <goal>format</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -141,7 +154,6 @@
           </execution>
         </executions>
       </plugin>
-
       <plugin>
         <groupId>io.github.phillipuniverse</groupId>
         <artifactId>githook-maven-plugin</artifactId>
@@ -155,7 +167,7 @@
               <hooks>
                 <pre-commit>
                   echo running ktlint
-                  ./mvnw -pl ktor-server-lambda-core,ktor-server-lambda-sample ktlint:format
+                  ./mvnw ktlint:format
                 </pre-commit>
               </hooks>
             </configuration>
