added kotlintest and mockk deps

--- a/ktor-server-lambda-core/pom.xml
+++ b/ktor-server-lambda-core/pom.xml
@@ -56,6 +56,27 @@
       <version>${ktor_version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>io.kotlintest</groupId>
+      <artifactId>kotlintest-runner-junit5</artifactId>
+      <version>3.3.2</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>io.mockk</groupId>
+      <artifactId>mockk</artifactId>
+      <version>1.9.3</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback_version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
