--- a/ktor-server-lambda-core/pom.xml
+++ b/ktor-server-lambda-core/pom.xml
@@ -57,6 +57,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>io.ktor</groupId>
+      <artifactId>ktor-server-tests</artifactId>
+      <version>${ktor_version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>io.kotlintest</groupId>
       <artifactId>kotlintest-runner-junit5</artifactId>
       <version>3.3.2</version>
