--- a/ktor-server-lambda-sample/pom.xml
+++ b/ktor-server-lambda-sample/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.mercateo</groupId>
     <artifactId>ktor-server-lambda</artifactId>
-    <version>0.0.8</version>
+    <version>0.0.9</version>
   </parent>
 
   <artifactId>ktor-server-lambda-sample</artifactId>
@@ -116,6 +116,7 @@
           <createDependencyReducedPom>false</createDependencyReducedPom>
           <shadedArtifactAttached>true</shadedArtifactAttached>
           <shadedClassifierName>aws</shadedClassifierName>
+          <finalName>ktor-server-lambda-sample</finalName>
         </configuration>
         <executions>
           <execution>
@@ -126,7 +127,6 @@
           </execution>
         </executions>
       </plugin>
-
     </plugins>
   </build>
 
