--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,15 +79,15 @@ jobs:
             chmod 600 ~/.ssh/id_rsa
             # probably not needed: ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
             # Else you're in "detached-head" state
-            git checkout $CIRCLE_BRANCH
+            # git checkout $CIRCLE_BRANCH
             # maybe needed but not accessible info: git config --global user.email $GITLAB_USER_EMAIL
             git config --global user.name "${CIRCLE_USERNAME} via GL"
             # set up gpg for signing the release artifact
             echo $GPG_SECRET_BASE64 | base64 --decode | gpg --import --no-tty --batch --yes
             echo $GPG_OWNERTRUST_BASE64 | base64 --decode | gpg --import-ownertrust --no-tty --batch --yes
             # Comment prefix [ci skip] prevents pipeline to trigger itself
-            $MVN_CMD_PREFIX release:prepare -DscmCommentPrefix="[ci skip]" -Darguments="-DskipTests"
-            $MVN_CMD_PREFIX release:perform -DscmCommentPrefix="[ci skip]" -Darguments="-DskipTests \
+            $MVN_CMD release:prepare -DscmCommentPrefix="[ci skip]" -Darguments="-DskipTests"
+            $MVN_CMD release:perform -DscmCommentPrefix="[ci skip]" -Darguments="-DskipTests \
                 -Poss.release-sign-artifacts \
                 -Dgpg.executable=gpg \
                 -Dgpg.passphrase=$GPG_PASSPHRASE \
@@ -96,7 +96,7 @@ jobs:
             # usable for read-only access. Defining a second one for pushing commits.
             # There also is a way to ask a project about its "ssh url" via REST api - couldn't
             # get it to work, hence, the work-around.
-            SSH_REPO_URL=$($MVN_CMD_PREFIX help:effective-pom --non-recursive | grep developerConnection | sed 's/<.*>scm:git://g' | sed 's/<.*//g')
+            SSH_REPO_URL=$($MVN_CMD help:effective-pom --non-recursive | grep developerConnection | sed 's/<.*>scm:git://g' | sed 's/<.*//g')
             git remote add origin-ssh $SSH_REPO_URL
             git tag
             git fetch -p origin-ssh
