--- a/ktor-server-lambda-sample/pom.xml
+++ b/ktor-server-lambda-sample/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.mercateo</groupId>
     <artifactId>ktor-server-lambda</artifactId>
-    <version>0.0.10</version>
+    <version>0.0.10-SNAPSHOT</version>
   </parent>
 
   <artifactId>ktor-server-lambda-sample</artifactId>
