--- a/ktor-server-lambda-sample/pom.xml
+++ b/ktor-server-lambda-sample/pom.xml
@@ -8,7 +8,7 @@
     <groupId>com.mercateo</groupId>
     <artifactId>ktor-server-lambda</artifactId>
     <version>0.0.10-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <relativePath>../</relativePath>
   </parent>
 
   <artifactId>ktor-server-lambda-sample</artifactId>
